--- a/VsTools/NServiceBusNavigator/NServiceBusNavigator.csproj
+++ b/VsTools/NServiceBusNavigator/NServiceBusNavigator.csproj
@@ -45,6 +45,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="FindIHandleMessages.cs" />
     <Compile Include="FindIAmStartedBy.cs" />
     <Compile Include="FindSendAndPublish.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
