--- a/NServiceBusTools/NServiceBusNavigator/NServiceBusNavigator.csproj
+++ b/NServiceBusTools/NServiceBusNavigator/NServiceBusNavigator.csproj
@@ -45,6 +45,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="FindTaskHandle.cs" />
     <Compile Include="FindIHandleMessages.cs" />
     <Compile Include="FindIAmStartedBy.cs" />
     <Compile Include="FindSendAndPublish.cs" />
